--- a/videogames.html
+++ b/videogames.html
@@ -85,7 +85,7 @@
 
                  <ul class="list-group">
                   <li class="list-group-item">
-                    <a class="nav-link" href="#showtimes">Beat Saber (2018)</a>
+                    <a class="nav-link" href="#dota2">DOTA2</a>
                   </li>
                   <li class="list-group-item">
                     <a class="nav-link" href="#showtimes">Arizona Sunshine (2016)</a>
@@ -111,20 +111,21 @@
 
             <!-- Cards here -->
 
-              <div class="card-deck py-5">
+              <div class="card-deck py-5"  id="dota2">
                 <div class="card">
-                  <img class="card-img-top" src="./img/beatsaber.jpg" alt="Card image cap">
+                  <img class="card-img-top" src="./img/DOTA2.jpeg" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Defense of the Ancients 2</h5>
                     <p class="card-text">
-                      <span class="badge badge-pill badge-info">One player</span>
-                      <span class="badge badge-pill badge-info">Multi</span>
-                      <span class="badge badge-pill badge-info">Easy to Hard</span>
-                      <span class="badge badge-pill badge-info">Max replayability</span>
-                      <span class="badge badge-pill badge-info">kid friendly</span>
+                      <span class="badge badge-pill badge-info">MOBA</span>
+                      <span class="badge badge-pill badge-info">Multiplayer</span>
+                      <span class="badge badge-pill badge-info">Teamwork</span><br>
+                      <span class="badge badge-pill badge-info">Free to play</span>
+                      <span class="badge badge-pill badge-info">Strategic</span>
+                      
                     </p>
                     <div class="card-footer">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                      <small class="text-muted"><b> <a href="https://liquipedia.net/dota2/The_International">The International</a> </b>, often abbreviated as <b>TI</b> , remains the biggest and most prestigious event on the Major Championship circuit.</small>
                     </div>
                   </div>
                   
