Ajout du jeu FIFA 22

--- a/videogames.html
+++ b/videogames.html
@@ -215,7 +215,23 @@
                       <small class="text-muted">Last updated 3 mins ago</small>
                     </div>
                   </div>
-                 
+                </div>
+
+                <div class="card">
+                  <img class="card-img-top" src="./img/fifa-22.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Fifa 22</h5>
+                     <p class="card-text">
+                      <span class="badge badge-pill badge-info">One player</span>
+                      <span class="badge badge-pill badge-info">Multi</span>
+                      <span class="badge badge-pill badge-info">Easy to Hard</span>
+                      <span class="badge badge-pill badge-info">Sport</span>
+                      <span class="badge badge-pill badge-info">kid friendly or not ;-)</span>
+                    </p>
+                     <div class="card-footer">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                  </div>
                 </div>
               </div>
 
