Game modification Arizona Sunshine

--- a/videogames.html
+++ b/videogames.html
@@ -133,16 +133,16 @@
                 <div class="card">
                   <img class="card-img-top" src="./img/arizonasunshine.webp" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Arizona Sunshine</h5>
                      <p class="card-text">
                       <span class="badge badge-pill badge-info">One player</span>
                       <span class="badge badge-pill badge-info">Multi</span>
-                      <span class="badge badge-pill badge-info">Easy to Hard</span>
-                      <span class="badge badge-pill badge-info">Max replayability</span>
-                      <span class="badge badge-pill badge-info">kid friendly or not ;-)</span>
+                      <span class="badge badge-pill badge-info">Medium</span>
+                      <span class="badge badge-pill badge-info">VR</span>
+                      <span class="badge badge-pill badge-info">+18</span>
                     </p>
                     <div class="card-footer">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                      <small class="text-muted"><b><a href ="https://store.steampowered.com/app/342180/Arizona_Sunshine">Arizona Sunshine</a> </b>is a zombie survival first-person shooter video game released on December 6, 2016. The game is compatible with the HTC Vive, Oculus Rift, Oculus Quest, Valve Index and PlayStation VR virtual reality headsets.</small>
                     </div>
                   </div>
                   
