--- a/videogames.html
+++ b/videogames.html
@@ -130,19 +130,19 @@
                   </div>
                   
                 </div>
-                <div class="card">
-                  <img class="card-img-top" src="./img/arizonasunshine.webp" alt="Card image cap">
+                <div class="card" id="Valorant">
+                  <img class="card-img-top" src="./img/Valorant.jpag" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Valorant</h5>
                      <p class="card-text">
-                      <span class="badge badge-pill badge-info">One player</span>
-                      <span class="badge badge-pill badge-info">Multi</span>
-                      <span class="badge badge-pill badge-info">Easy to Hard</span>
-                      <span class="badge badge-pill badge-info">Max replayability</span>
-                      <span class="badge badge-pill badge-info">kid friendly or not ;-)</span>
+                      <span class="badge badge-pill badge-info">First person shooter</span>
+                      <span class="badge badge-pill badge-info">Multiplayer</span>
+                      <span class="badge badge-pill badge-info">Teamwork</span>
+                      <span class="badge badge-pill badge-info">Free to play</span>
+                      <span class="badge badge-pill badge-info">PEGI 16</span>
                     </p>
                     <div class="card-footer">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                      <small class="text-muted"><p>Valorant is <b>a team-based first-person hero shooter set in the near future.</b> Players play as one of a set of Agents, characters designed based on several countries and cultures around the world. In the main game mode, players are assigned to either the attacking or defending team with each team having five players on it.</p></small>
                     </div>
                   </div>
                   
