--- a/videogames.html
+++ b/videogames.html
@@ -292,6 +292,70 @@
               </form>
           <!-- Signup here --> 
 
+          <!-- Credits here -->
+              <div id="credits" class="py-5 text-center">
+                <h4 class="text-info mb-4">Credits</h4>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-sm">
+                      Aksel Vaillant <a href="https://github.com/aksel-vaillant">@aksel-vaillant</a>
+                    </div>
+                    <div class="col-sm">
+                      Clément Le Batard <a href="https://github.com/slikosb">@slikosb</a>
+                    </div>
+                    <div class="col-sm">
+                      Nicolas Boisseau <a href="https://github.com/Getiii">@Getiii</a>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm">
+                      Thomas Bastide <a href="https://github.com/Toh-Ma">@Toh-Ma</a>
+                    </div>
+                    <div class="col-sm">
+                      Oussama Bouazza <a href="https://github.com/OussamaBouazza">@OussamaBouazza</a>
+                    </div>
+                    <div class="col-sm">
+                      Duc Bach Nguyen <a href="https://github.com/BachENSIM">@BachENSIM</a>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm">
+                      Resk Berchid <a href="https://github.com/RezkB">@RezkB</a>
+                    </div>
+                    <div class="col-sm">
+                      Salim Bni Oukil
+                    </div>
+                    <div class="col-sm">
+                      Kawtar Cherrate
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm">
+                      Othmane El Kinany
+                    </div>
+                    <div class="col-sm">
+                      Kawtar Fatara
+                    </div>
+                    <div class="col-sm">
+                      Rida Massou
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm">
+                      Mohammed Amine Nemri
+                    </div>
+                    <div class="col-sm">
+                      Martin Junior Tchoupe
+                    </div>
+                    <div class="col-sm">
+                    </div>
+                  </div>
+                </div>
+              </div>
+          
+
+          <!-- Credits here -->
+
 
             <!-- Nav here --> 
 
