--- a/videogames.html
+++ b/videogames.html
@@ -131,20 +131,36 @@
                   
                 </div>
                 <div class="card">
-                  <img class="card-img-top" src="./img/arizonasunshine.webp" alt="Card image cap">
+                  <img class="card-img-top" src="./img/elden-ring.jpg" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Elden Ring</h5>
                      <p class="card-text">
                       <span class="badge badge-pill badge-info">One player</span>
                       <span class="badge badge-pill badge-info">Multi</span>
-                      <span class="badge badge-pill badge-info">Easy to Hard</span>
-                      <span class="badge badge-pill badge-info">Max replayability</span>
-                      <span class="badge badge-pill badge-info">kid friendly or not ;-)</span>
+                      <span class="badge badge-pill badge-info">Hard</span>
+                      <span class="badge badge-pill badge-info">RPG</span>
+                      <span class="badge badge-pill badge-info">16yo</span>
                     </p>
                     <div class="card-footer">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                      <small class="text-muted">Best RPG of 2021</small>
                     </div>
                   </div>
+
+                  <div class="card">
+                    <img class="card-img-top" src="./img/arizonasunshine.webp" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                       <p class="card-text">
+                        <span class="badge badge-pill badge-info">One player</span>
+                        <span class="badge badge-pill badge-info">Multi</span>
+                        <span class="badge badge-pill badge-info">Easy to Hard</span>
+                        <span class="badge badge-pill badge-info">Max replayability</span>
+                        <span class="badge badge-pill badge-info">kid friendly or not ;-)</span>
+                      </p>
+                      <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                      </div>
+                    </div>
                   
                 </div>
                 <div class="card" >
