--- a/videogames.html
+++ b/videogames.html
@@ -111,8 +111,8 @@
 
             <!-- Cards here -->
 
-              <div class="card-deck py-5"  id="dota2">
-                <div class="card">
+              <div class="card-deck py-5">
+                <div class="card"  id="dota2">
                   <img class="card-img-top" src="./img/DOTA2.jpeg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Defense of the Ancients 2</h5>
@@ -130,6 +130,7 @@
                   </div>
                   
                 </div>
+
                 <div class="card">
                   <img class="card-img-top" src="./img/elden-ring.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -145,6 +146,7 @@
                       <small class="text-muted">Best RPG of 2021</small>
                     </div>
                   </div>
+                </div>
 
                   <div class="card">
                     <img class="card-img-top" src="./img/arizonasunshine.webp" alt="Card image cap">
