modifié HTML et IMG

--- a/videogames.html
+++ b/videogames.html
@@ -139,6 +139,7 @@
                       <span class="badge badge-pill badge-info">Multiplayer</span>
                       <span class="badge badge-pill badge-info">Teamwork</span>
                       <span class="badge badge-pill badge-info">Free to play</span>
+                      <span class="badge badge-pill badge-info">Strategic</span>
                       <span class="badge badge-pill badge-info">PEGI 16</span>
                     </p>
                     <div class="card-footer">
