Add League of legends as a 4th game

--- a/videogames.html
+++ b/videogames.html
@@ -177,7 +177,21 @@
                   </div>
                 </div>
               </div>
-
+              <div class="card">
+                <img class="card-img-top" src="./img/League_Of_Legends.jpeg" alt="League Of Legends Thumbnail">
+                <div class="card-body">
+                  <h5 class="card-title">League Of Legends (LoL)</h5>
+                  <p class="card-text">
+                    <span class="badge badge-pill badge-info">Multiplayer</span>
+                    <span class="badge badge-pill badge-info">Battle Arena</span><br>
+                    <span class="badge badge-pill badge-info">Online</span>
+                    <span class="badge badge-pill badge-info">Action Role Playing</span>
+                  </p>
+                  <div class="card-footer">
+                    <small class="text-muted"><b> <a href="https://www.leagueoflegends.com/">League of Legends</a></b>, commonly referred to as League, is a 2009 multiplayer online battle arena video game developed and published by Riot Games.</small>
+                  </div>
+                </div>
+              </div>
               <div class="card-deck" id="showtimes">
                 <div class="card">
                   <img   class="card-img-top fluid" src="./img/halflifealyx.jpeg" alt="Card image cap">
@@ -366,7 +380,7 @@
                       Kawtar Fatara
                     </div>
                     <div class="col-sm">
-                      Rida Massou
+                      Rida Massou <a href="https://github.com/Rd-Massou">@Rd-Massou</a>
                     </div>
                   </div>
                   <div class="row">
