--- a/videogames.html
+++ b/videogames.html
@@ -88,7 +88,7 @@
                     <a class="nav-link" href="#dota2">DOTA2</a>
                   </li>
                   <li class="list-group-item">
-                    <a class="nav-link" href="#showtimes">Arizona Sunshine (2016)</a>
+                    <a class="nav-link" href="#showtimes">Valorant</a>
                   </li>
                   <li class="list-group-item">
                     <a class="nav-link" href="#showtimes">Population : One</a>
@@ -111,8 +111,8 @@
 
             <!-- Cards here -->
 
-              <div class="card-deck py-5"  id="dota2">
-                <div class="card">
+              <div class="card-deck py-5">
+                <div class="card"  id="dota2">
                   <img class="card-img-top" src="./img/DOTA2.jpeg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Defense of the Ancients 2</h5>
@@ -133,34 +133,53 @@
                 <div class="card" id="arizona-sunshine">
                   <img class="card-img-top" src="./img/arizonasunshine.webp" alt="Card image cap">
                   <div class="card-body">
-
                     <h5 class="card-title">Arizona Sunshine</h5>
-                     <p class="card-text">
+                    <p class="card-text">
                       <span class="badge badge-pill badge-info">One player</span>
                       <span class="badge badge-pill badge-info">Multi</span>
-                      <span class="badge badge-pill badge-info">Medium</span>
-                      <span class="badge badge-pill badge-info">VR</span>
-                      <span class="badge badge-pill badge-info">+18</span>
+                      <span class="badge badge-pill badge-info">Easy to Hard</span>
+                      <span class="badge badge-pill badge-info">Max replayability</span>
+                      <span class="badge badge-pill badge-info">kid friendly or not ;-)</span>
                     </p>
-                    <div class="card-footer">
-                      <small class="text-muted"><b><a href ="https://store.steampowered.com/app/342180/Arizona_Sunshine">Arizona Sunshine</a> </b>is a zombie survival first-person shooter video game released on December 6, 2016. The game is compatible with the HTC Vive, Oculus Rift, Oculus Quest, Valve Index and PlayStation VR virtual reality headsets.</small>
+                    <div>
+                    <small class="text-muted"><b><a href ="https://store.steampowered.com/app/342180/Arizona_Sunshine">Arizona Sunshine</a> </b>is a zombie survival first-person shooter video game released on December 6, 2016. The game is compatible with the HTC Vive, Oculus Rift, Oculus Quest, Valve Index and PlayStation VR virtual reality headsets.</small>
                   </div>
                 </div>
               </div>
-              <div class="card" id="valorant">
-                <img class="card-img-top" src="./img/Valorant.avif" alt="Card image cap">
-                <div class="card-body">
-              <h5 class="card-title">Valorant</h5>
+
+                <div class="card" id="Elden">
+                  <img class="card-img-top" src="./img/elden-ring.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Elden Ring</h5>
+                     <p class="card-text">
+                      <span class="badge badge-pill badge-info">One player</span>
+                      <span class="badge badge-pill badge-info">Multi</span>
+                      <span class="badge badge-pill badge-info">Hard</span>
+                      <span class="badge badge-pill badge-info">RPG</span>
+                      <span class="badge badge-pill badge-info">16yo</span>
+                    </p>
+                    <div class="card-footer">
+                      <small class="text-muted">Best RPG of 2021</small>
+                    </div>
+                  </div>
+                </div>
+              
+                <div class="card" id="Valorant">
+                  <img class="card-img-top" src="./img/Valorant.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Valorant</h5>
                      <p class="card-text">
                       <span class="badge badge-pill badge-info">First person shooter</span>
                       <span class="badge badge-pill badge-info">Multiplayer</span>
                       <span class="badge badge-pill badge-info">Teamwork</span>
                       <span class="badge badge-pill badge-info">Free to play</span>
+                      <span class="badge badge-pill badge-info">Strategic</span>
                       <span class="badge badge-pill badge-info">PEGI 16</span>
                     </p>
                     <div class="card-footer">
                       <small class="text-muted"><p>Valorant is <b>a team-based first-person hero shooter set in the near future.</b> Players play as one of a set of Agents, characters designed based on several countries and cultures around the world. In the main game mode, players are assigned to either the attacking or defending team with each team having five players on it.</p></small>
                     </div>
+                  </div>
                   </div>
               <div class="card">
                 <img class="card-img-top" src="./img/populationOne.jpeg" alt="Card image cap">
@@ -190,8 +209,8 @@
                   </p>
                   <div class="card-footer">
                     <small class="text-muted"><b> <a href="https://www.leagueoflegends.com/">League of Legends</a></b>, commonly referred to as League, is a 2009 multiplayer online battle arena video game developed and published by Riot Games.</small>
-                  </div>
                 </div>
+  </div>
               </div>
               <div class="card-deck" id="showtimes">
                 <div class="card">
