--- a/videogames.html
+++ b/videogames.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Required meta tags -->
 
-    <link rel="icon" href=./img/games_logo.gif>
+    <link rel="icon" href=./img/games_logo.jpeg>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -22,7 +22,7 @@
             <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #e3f2fd;">
               
               <a class="navbar-brand" href="#">
-                <img src="./img/games_logo.jpeg" width="30" height="30" alt="">
+                <img src="./img/myensim.png" width="110" height="25 alt="">
               </a>
 
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,7 @@
               <div class="container d-none d-lg-block">
                 <h1 class="display-2" id="jumbo-title">Academy VR Games</h1>
                 <p class="lead">Sit back, relax and enjoy the game...</p>
-              </div>
+              </div> 
             </div>
 
             <!-- /Jumbotron here -->
@@ -363,7 +363,7 @@
                       Othmane El Kinany
                     </div>
                     <div class="col-sm">
-                      Kawtar Fatara
+                      Kawtar Fatara <a href="https://github.com/kawtar09">@kawtar09</a>
                     </div>
                     <div class="col-sm">
                       Rida Massou
