Add League Of Legends

--- a/videogames.html
+++ b/videogames.html
@@ -113,6 +113,9 @@
             <li class="list-group-item">
               <a class="nav-link" href="#horizon_forbidden_west">Horizon Forbidden West</a>
             </li>
+            <li class="list-group-item">
+              <a class="nav-link" href="#league-of-legends">League Of Legends</a>
+            </li>
           </ul>
 
         </div>
@@ -206,7 +209,21 @@
         </div>
       </div>
     </div>
-
+    <div class="card" id="league-of-legends">
+      <img class="card-img-top" src="./img/League_Of_Legends.jpeg" alt="League Of Legends Thumbnail">
+      <div class="card-body">
+        <h5 class="card-title">League Of Legends (LoL)</h5>
+        <p class="card-text">
+          <span class="badge badge-pill badge-info">Multiplayer</span>
+          <span class="badge badge-pill badge-info">Battle Arena</span><br>
+          <span class="badge badge-pill badge-info">Online</span>
+          <span class="badge badge-pill badge-info">Action Role Playing</span>
+        </p>
+        <div class="card-footer">
+          <small class="text-muted"><b> <a href="https://www.leagueoflegends.com/">League of Legends</a></b>, commonly referred to as League, is a 2009 multiplayer online battle arena video game developed and published by Riot Games.</small>
+      </div>
+</div>
+    </div>
     <div class="card-deck py-5">
       <div class="card">
         <img class="card-img-top" src="./img/arizonasunshine.webp" alt="Card image cap">
