modification image du jeu

--- a/videogames.html
+++ b/videogames.html
@@ -280,7 +280,7 @@
 
 
       <div class="card">
-        <img class="card-img-top" src="./img/superhot.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="./img/superhot.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">SuperHot Game</h5>
           <p class="card-text">
