Changement en Les JV de l'ENSIM

--- a/videogames.html
+++ b/videogames.html
@@ -56,7 +56,7 @@
         <!-- Jumbotron here -->
         <div class="jumbotron jumbotron-fluid text-center bg-info">
             <div class="container d-none d-lg-block">
-                <h1 class="display-2" id="jumbo-title">Academy VR Games</h1>
+                <h1 class="display-2" id="jumbo-title">Les JV de l'ENSIM</h1>
                 <p class="lead">Sit back, relax and enjoy the game...</p>
             </div>
         </div>
