--- a/videogames.html
+++ b/videogames.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/cinemaStyles.css">
 
-    <title>Academy Cinemas</title>
+    <title>Cinémas de l'ENSIM</title>
 
 </head>
 
@@ -68,7 +68,7 @@
         <div class="container" id="about">
             <div class="row">
                 <div class="col-md-4">
-                    <h3>About Academy Cinemas</h3>
+                    <h3>About ENSIM Cinemas</h3>
                     <img class="img-fluid" src="./img/pdx.jpeg" alt="" />
                     <p>Located in the beautiful city of Portland, Oregon's Pearl district! </p>
                     <p>Our reels have been spinning since 1999. Showing our guests a great time is our passion and seeing their smiles is our pleasure!</p>
@@ -467,7 +467,7 @@
                   </div>
                   <div class=" row ">
                     <div class=" col-sm ">
-                      Resk Berchid <a href=" https://github.com/RezkB ">@RezkB</a>
+                      Rezk Berchid <a href=" https://github.com/RezkB ">@RezkB</a>
                     </div>
                     <div class=" col-sm ">
                       Salim Bni Oukil
