fix About Academy

--- a/videogames.html
+++ b/videogames.html
@@ -68,10 +68,9 @@
         <div class="container" id="about">
             <div class="row">
                 <div class="col-md-4">
-                    <h3>About ENSIM Cinemas</h3>
-                    <img class="img-fluid" src="./img/pdx.jpeg" alt="" />
-                    <p>Located in the beautiful city of Portland, Oregon's Pearl district! </p>
-                    <p>Our reels have been spinning since 1999. Showing our guests a great time is our passion and seeing their smiles is our pleasure!</p>
+                    <h3>About ENSIM</h3>
+                    <img class="img-fluid" src="./img/visuel-haut-accueil.jpg" alt="" />
+                    <p>L’ENSIM est une école habilitée par la CTI (Commission des Titres d'Ingénieur) à délivrer le titre d'ingénieur avec un grade de master</p>
                 </div>
                 <div class="col-md-4">
                     <h3>Accomodations</h3>
