--- a/videogames.html
+++ b/videogames.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <!-- Required meta tags -->
@@ -74,9 +74,12 @@
                 </div>
                 <div class="col-md-4">
                     <h3>Accomodations</h3>
+                    <img class="img-fluid" src="./img/accomm.jpg" alt="" />
                     <p>All of our rooms are equipped with brand new Alienware systems!</p>
-                    <p>Relax in our, extra-wide, plush cushioning recliners. Seating is on first-come-first-served basis. Our seating arrangement is disability friendly ♿.</p>
+                    <p>Relax in our, extra-wide,plush cushioning recliners. Seating is on first-come-first-served basis. Our seating arrangement is disability friendly ♿.</p>
                     <p>Our rooms are climate controlled to approximately 72° year-round.</p>
+                    <p>Y£ou have also a large windows with great views</p>
+
                 </div>
 
 
