--- a/videogames.html
+++ b/videogames.html
@@ -74,11 +74,11 @@
                 </div>
                 <div class="col-md-4">
                     <h3>Accomodations</h3>
-                    <img class="img-fluid" src="./img/accomm.jpg" alt="" />
+                    <img class="img-fluid" src="./img/ensim.jpg" alt="" />
                     <p>All of our rooms are equipped with brand new Alienware systems!</p>
                     <p>Relax in our, extra-wide,plush cushioning recliners. Seating is on first-come-first-served basis. Our seating arrangement is disability friendly ♿.</p>
                     <p>Our rooms are climate controlled to approximately 72° year-round.</p>
-                    <p>Y£ou have also a large windows with great views</p>
+                    <p>You have also a large windows with great views</p>
 
                 </div>
 
